<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.betopartida.puppyplanet.Contacto">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_arriba"
        android:paddingBottom="@dimen/padding_abajo"
        android:text="@string/mensaje_comentario"
        />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNombre"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        >
    </android.support.design.widget.TextInputEditText>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        >
    </android.support.design.widget.TextInputEditText>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtComentarios"
        android:hint="@string/comentarios"
        android:inputType="textImeMultiLine"
        >
    </android.support.design.widget.TextInputEditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_email"
        android:layout_marginTop="@dimen/margen_arriba"
        android:layout_gravity="center"
        android:text="@string/enviar"/>

</LinearLayout>
